# excelWriter

./: .gitignore  CMakeLists.txt  ExcelWriter.cpp  InputParser.cpp  build.sh  d.sh  excelWriter  main.cpp  makefile  output.xlxs  test.xls  test.xlsx  testdata1.json  testdata2.json  types.h  update.sh
testdata/: test3.json  testdata.json
